Send beam info to video manager

--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -221,6 +221,7 @@
     <None Include="shaders\a2video_hgr.frag" />
     <None Include="shaders\a2video_lgr.frag" />
     <None Include="shaders\a2video_postprocess.glsl" />
+    <None Include="shaders\a2video_shr.frag" />
     <None Include="shaders\a2video_text.frag" />
     <None Include="shaders\basic.frag" />
     <None Include="shaders\basic.vert" />
