--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <ClInclude Include="A2VideoManager.h" />
     <ClInclude Include="A2Window.h" />
+    <ClInclude Include="ByteBuffer.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="ConcurrentQueue.h" />
