--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="glad">
       <UniqueIdentifier>{c076ead4-8be1-43cd-b5cd-5b6d1e4e6d81}</UniqueIdentifier>
     </Filter>
-    <Filter Include="textures">
-      <UniqueIdentifier>{af4e1558-efb6-497b-b5aa-45c58b265b4e}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -235,34 +232,45 @@
     <None Include="shaders\a2video_shr.frag">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\a2video_beam_legacy.frag">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="textures\Texture_Default.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Apple2eFont7x16 - Alternate.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Texture_Scanlines.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Apple2eFont7x16 - Regular.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Apple2eFont7x16 - Alternate.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Apple2eFont14x16 - Alternate.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Apple2eFont7x16 - Regular.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Apple2eFont14x16 - Regular.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Apple2eFont14x16 - Alternate.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Bezel.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Apple2eFont14x16 - Regular.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Texture_composite_complete.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Texture_composite_dhgr.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Texture_composite_dhgr.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Texture_composite_hgr.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Texture_composite_hgr.png">
+      <Filter>assets</Filter>
     </Image>
-    <Image Include="textures\Texture_composite_lgr.png">
-      <Filter>textures</Filter>
+    <Image Include="assets\Texture_composite_lgr.png">
+      <Filter>assets</Filter>
     </Image>
+    <Image Include="assets\Texture_Default.png">
+      <Filter>assets</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="assets\ProggyTiny.ttf">
+      <Filter>assets</Filter>
+    </Font>
   </ItemGroup>
 </Project>
