--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="A2Window.cpp" />
+    <ClCompile Include="A2WindowBeam.cpp" />
     <ClCompile Include="CycleCounter.cpp" />
     <ClCompile Include="EventRecorder.cpp" />
     <ClCompile Include="extras\ImGuiFileDialog.cpp" />
@@ -184,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="A2VideoManager.h" />
     <ClInclude Include="A2Window.h" />
+    <ClInclude Include="A2WindowBeam.h" />
     <ClInclude Include="ByteBuffer.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
