--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -223,6 +223,7 @@
     <None Include="README.md" />
     <None Include="shaders\a2video.vert" />
     <None Include="shaders\a2video_beam_legacy.frag" />
+    <None Include="shaders\a2video_beam_shr.frag" />
     <None Include="shaders\a2video_dhgr.frag" />
     <None Include="shaders\a2video_hgr.frag" />
     <None Include="shaders\a2video_lgr.frag" />
