--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="A2WindowBeam.cpp" />
+    <ClCompile Include="Ayumi.cpp" />
     <ClCompile Include="CycleCounter.cpp" />
     <ClCompile Include="EventRecorder.cpp" />
     <ClCompile Include="extras\ImGuiFileDialog.cpp" />
@@ -171,8 +172,10 @@
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="InAppGpuProfiler\iagp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemoryManager.cpp" />
+    <ClCompile Include="MockingboardManager.cpp" />
     <ClCompile Include="MosaicMesh.cpp" />
     <ClCompile Include="OpenGLHelper.cpp" />
     <ClCompile Include="PostProcessor.cpp" />
@@ -181,10 +184,13 @@
     <ClCompile Include="SDHRWindow.cpp" />
     <ClCompile Include="A2VideoManager.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="A2VideoManager.h" />
     <ClInclude Include="A2WindowBeam.h" />
+    <ClInclude Include="Ayumi.h" />
+    <ClInclude Include="beeper.h" />
     <ClInclude Include="ByteBuffer.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
@@ -204,7 +210,11 @@
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_internal.h" />
     <ClInclude Include="imgui_memory_editor.h" />
+    <ClInclude Include="InAppGpuProfiler\CustomInAppGpuProfiler.h" />
+    <ClInclude Include="InAppGpuProfiler\iagp.h" />
+    <ClInclude Include="InAppGpuProfiler\iagpConfig.h" />
     <ClInclude Include="MemoryManager.h" />
+    <ClInclude Include="MockingboardManager.h" />
     <ClInclude Include="MosaicMesh.h" />
     <ClInclude Include="my_imgui_config.h" />
     <ClInclude Include="OpenGLHelper.h" />
@@ -213,11 +223,14 @@
     <ClInclude Include="SDHRNetworking.h" />
     <ClInclude Include="SDHRWindow.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="imgui\imgui\misc\debuggers\imgui.natstepfilter" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natvis" />
+    <None Include="InAppGpuProfiler\LICENSE" />
+    <None Include="InAppGpuProfiler\README.md" />
     <None Include="Makefile" />
     <None Include="packages.config" />
     <None Include="README.md" />
