--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -283,6 +283,9 @@
     <None Include="shaders\a2video_beam_merge.frag">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\a2video_beam_shr_raw.frag">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Apple2eFont7x16 - Alternate.png">
