--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -176,12 +176,6 @@
     <ClInclude Include="imgui\backends\imgui_impl_sdl2.h">
       <Filter>imgui</Filter>
     </ClInclude>
-    <ClInclude Include="ImGuiFileDialog.h">
-      <Filter>headers</Filter>
-    </ClInclude>
-    <ClInclude Include="ImGuiFileDialogConfig.h">
-      <Filter>headers</Filter>
-    </ClInclude>
     <ClInclude Include="extras\MemoryLoader.h">
       <Filter>headers</Filter>
     </ClInclude>
@@ -222,6 +216,12 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="m6522.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="extras\ImGuiFileDialog.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="extras\ImGuiFileDialogConfig.h">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
