--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="SSI263.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="VidHdWindowBeam.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -227,6 +230,9 @@
     <ClInclude Include="ftd3xx_win.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="VidHdWindowBeam.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
@@ -287,6 +293,9 @@
       <Filter>shaders</Filter>
     </None>
     <None Include="shaders\a2video_beam_shr_raw.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\vidhd_beam_text.frag">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
