Bezels. Improved postprocessing with transform instead of pushing quads.

--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -298,6 +298,9 @@
     <None Include="shaders\vidhd_beam_text.frag">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\basic_with_transform.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Apple2eFont7x16 - Alternate.png">
