--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -266,6 +266,7 @@
     <None Include="shaders\a2video_text.frag" />
     <None Include="shaders\basic.frag" />
     <None Include="shaders\basic.vert" />
+    <None Include="shaders\basic_with_transform.vert" />
     <None Include="shaders\sdhr_default_330.frag" />
     <None Include="shaders\sdhr_default_330.vert" />
     <None Include="shaders\sdhr_depixelize_330.frag" />
