--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -301,6 +301,9 @@
     <None Include="shaders\basic_with_transform.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\overlay_bezel.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Apple2eFont7x16 - Alternate.png">
