New preset system

--- a/presets/00_default_apple_crt.json
+++ b/presets/00_default_apple_crt.json
@@ -2,13 +2,14 @@
     "bAutoScale": true,
     "bCRTFillWindow": false,
     "bezelHeight": 1.0,
-    "bezelName": "NONE",
-    "bezelWidth": 1.0199999809265137,
+    "bezelName": "Apple_Monitor_Only_Reflections.png",
+    "bezelWidth": 1.0,
     "integer_scale": 2,
     "p_b_extGamma": false,
     "p_b_slot": false,
     "p_b_smoothCorner": true,
     "p_f_barrelDistortion": 0.05999999865889549,
+    "p_f_bezelReflection": 0.20399999618530273,
     "p_f_bgr": 0.0,
     "p_f_black": -0.05999999865889549,
     "p_f_brDep": 0.0,
@@ -28,6 +29,7 @@
     "p_f_maskLow": 0.4099999964237213,
     "p_f_maskSize": 1.0,
     "p_f_phosphorBlur": 0.20999999344348907,
+    "p_f_reflectionBlur": 3.7769999504089355,
     "p_f_saturation": 1.0199999809265137,
     "p_f_scanSpeed": 0.0,
     "p_f_scanlineWeight": 1.0,
@@ -39,6 +41,10 @@
     "p_i_scanlineType": 2,
     "p_v_centerX": 0.0,
     "p_v_centerY": 0.0,
+    "p_v_reflectionScaleX": 2.0,
+    "p_v_reflectionScaleY": 1.4859999418258667,
+    "p_v_reflectionTranslationX": 0.0,
+    "p_v_reflectionTranslationY": 0.0,
     "p_v_warpX": 0.0,
     "p_v_warpY": 0.0,
     "p_v_zoomX": 1.0,
