--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -269,6 +269,7 @@
     <None Include="shaders\basic.frag" />
     <None Include="shaders\basic.vert" />
     <None Include="shaders\basic_with_transform.vert" />
+    <None Include="shaders\ntsc_sik.frag" />
     <None Include="shaders\overlay_bezel.glsl" />
     <None Include="shaders\sdhr_default_330.frag" />
     <None Include="shaders\sdhr_default_330.vert" />
