--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -349,6 +349,6 @@
     </Font>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="lib\Win_x64\FTD3XX.lib" />
+    <Library Include="lib\Win_x64\FTD3XXWU.lib" />
   </ItemGroup>
 </Project>
