Moved the samples menu as a submenu under SDD

--- a/assets/help.ini
+++ b/assets/help.ini
@@ -88,6 +88,9 @@ Please see the section "UI Navigation" for how to use the extensive user interfa
 • Appletini
 	This menu item tells you the state of the Appletini communication. If SDD can't find the Appletini, this is where you'll know.
 
+• Samples
+	A set of sample images and videos to showcase the capabilities of SDD.
+
 • Reset SDD
 	Probably not something you'll use. It essentially restarts SDD without quitting and restarting.
 
