--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -106,13 +106,14 @@
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>imgui;imgui\backends;%SDL2_DIR%\include;$(VcpkgCurrentInstalledDir)include\SDL2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>%SDL2_DIR%\lib\x64;lib\Win_x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;FTD3XX.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;FTD3XXWU.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
       <IgnoreSpecificDefaultLibraries>msvcrt.lib</IgnoreSpecificDefaultLibraries>
     </Link>
@@ -121,7 +122,8 @@
       </Command>
     </PreLinkEvent>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(SDL2_DIR)\lib\x64\*.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "$(SDL2_DIR)\lib\x64\*.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)\lib\Win_x64\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -148,11 +150,11 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <FunctionLevelLinking>false</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>imgui;imgui\backends;%SDL2_DIR%\include;$(VcpkgCurrentInstalledDir)include\SDL2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <BufferSecurityCheck>false</BufferSecurityCheck>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
@@ -161,7 +163,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>%SDL2_DIR%\lib\x64;lib\Win_x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;FTD3XX.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;SDL2.lib;SDL2main.lib;FTD3XXWU.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
@@ -171,11 +173,13 @@
       </Command>
     </PreLinkEvent>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(SDL2_DIR)\lib\x64\*.dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "$(SDL2_DIR)\lib\x64\*.dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)\lib\Win_x64\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="A2WindowBeam.cpp" />
+    <ClCompile Include="A2WindowRGB.cpp" />
     <ClCompile Include="Ayumi.cpp" />
     <ClCompile Include="BasicQuad.cpp" />
     <ClCompile Include="CycleCounter.cpp" />
@@ -204,11 +208,13 @@
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="SSI263.cpp" />
+    <ClCompile Include="TimedTextManager.cpp" />
     <ClCompile Include="VidHdWindowBeam.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="A2VideoManager.h" />
     <ClInclude Include="A2WindowBeam.h" />
+    <ClInclude Include="A2WindowRGB.h" />
     <ClInclude Include="Ayumi.h" />
     <ClInclude Include="BasicQuad.h" />
     <ClInclude Include="beeper.h" />
@@ -247,11 +253,13 @@
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="SSI263.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="TimedTextManager.h" />
     <ClInclude Include="VidHdWindowBeam.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="imgui\imgui\misc\debuggers\imgui.natstepfilter" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natvis" />
+    <None Include="lib\Win_x64\FTD3XXWU.dll" />
     <None Include="Makefile" />
     <None Include="packages.config" />
     <None Include="README.md" />
@@ -302,7 +310,7 @@
     <Font Include="assets\ProggyTiny.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="lib\Win_x64\FTD3XX.lib" />
+    <Library Include="lib\Win_x64\FTD3XXWU.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
